--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 
 @layer components {
   .container {
-    @apply w-[1200px] mx-auto
+    @apply !w-[1200px] mx-auto
   }
 
   .list {
@@ -42,11 +42,11 @@
   }
 
   .project_input {
-    @apply w-72 h-15 bg-bg_btn rounded-2xl mr-6 text-font_primary px-6
+    @apply w-72 h-15 bg-bg_btn rounded-2xl text-font_primary px-6
   }
 
   .icon {
-    @apply text-2xl text-font_primary
+    @apply text-2xl text-font_primary group-hover:text-secondary
   }
 }
 
